# TensorRT-Alpha-Plus

./: .gitignore  README.md  requirements.txt
cmake/: common.cmake
docker/: README.md  ubuntu18.04-cu117.Dockerfile  ubuntu20.04-cu117.Dockerfile
rtdetr/: CMakeLists.txt  main.cpp
rtdetr/apps/: app_rtdetr.cpp
rtdetr/trt_common/: trt_infer.cpp
utils/: common_include.h  utils.cpp  utils.h  yolo.cpp  yolo.h
webapi_rtdetr/: CMakeLists.txt  main.cpp  main_muduo.cpp
webapi_rtdetr/apps/: app_rtdetr_web.cpp  rtdetr_decode.cu  rtdetr_web.cpp  rtdetr_web.hpp  threadpool.cpp  threadpool.hpp
webapi_rtdetr/trt_common/: infer_controller.hpp
webapi_yolov8/: CMakeLists.txt  web_yolov8.cpp  yolov8.cpp  yolov8.h
yolov8/: CMakeLists.txt  yolov8.cpp  yolov8.h
yolov8-pose/: app_yolov8_pose.cpp
